refactor: renew search features including schemas
