# lib/mihari/models/rule.rb
@@ -1,7 +1,5 @@
 # frozen_string_literal: true
 
-require "yaml"
-
 module Mihari
   module Models
     #
@@ -9,6 +7,15 @@ module Mihari
     #
     class Rule < ActiveRecord::Base
       has_many :alerts, dependent: :destroy
+      has_many :taggings, dependent: :destroy
+      has_many :tags, through: :taggings
+
+      include SearchCop
+
+      search_scope :search do
+        attributes :title, :description, :created_at, :updated_at
+        attributes tag: "tags.name"
+      end
 
       def symbolized_data
         @symbolized_data ||= data.deep_symbolize_keys
@@ -18,41 +25,16 @@ module Mihari
         data.to_yaml
       end
 
-      def tags
-        (data["tags"] || []).map { |tag| { name: tag } }
-      end
-
       class << self
-        include Paginationable
+        include Searchable
 
-        # @!method search(filter)
-        #   @param [Mihari::Structs::Filters::Rule::SearchFilter] filter
-        #   @return [Array<Mihari::Models::Rule>]
+        # @!method search_by_filter(filter)
+        #   @param [Mihari::Structs::Filters::Search] filter
+        #   @return [Array<Mihari::Models::Alert>]
 
-        # @!method count(filter)
-        #   @param [Mihari::Structs::Filters::Rule::SearchFilter] filter
+        # @!method count_by_filter(filter)
+        #   @param [Mihari::Structs::Filters::Search] filter
         #   @return [Integer]
-
-        private
-
-        #
-        # @param [Mihari::Structs::Filters::Rule::SearchFilter] filter
-        #
-        # @return [Mihari::Models::Rule]
-        #
-        def build_relation(filter)
-          relation = includes(alerts: :tags)
-
-          relation = relation.where(alerts: { tags: { name: filter.tag } }) if filter.tag
-
-          relation = relation.where("rules.title LIKE ?", "%#{filter.title}%") if filter.title
-          relation = relation.where("rules.description LIKE ?", "%#{filter.description}%") if filter.description
-
-          relation = relation.where("rules.created_at >= ?", filter.from_at) if filter.from_at
-          relation = relation.where("rules.created_at <= ?", filter.to_at) if filter.to_at
-
-          relation
-        end
       end
     end
   end
